# minimal-project

./: .gitignore  README.org  pyproject.toml
src/minimal_project/: console.py
