[tool.poetry]
name = "minimal-project"
version = "0.1.0"
description = "Modern Python practices"
authors = ["Carlos Perez <carlosperezmolano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "minimal_project.console:main"
